--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
           </tr>
           <tr>
             <td><strong>Family</strong></td>
-            <td>Single mother (Kristen Curry), 6 children, husband-deceased (military)</td>
+            <td>Single mother (Kristen Curry), 6 children, husband-deceased (firefighter)</td>
           </tr>
           <tr>
             <td><strong>Expenses</strong></td>
-            <td>Currently at $3,000 a week and rising</td>
+            <td>Currently at $4,000 - $5000 a week and rising</td>
           </tr>
         </tbody>
       </table>
@@ -131,7 +131,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-8">
     <h1>Related video</h1>
-    This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content. This is the test content to test that is the test content. And of the filler text content. Always update your content. This is the test content to test that is the test content.
+    This is a video that is talking about the severity of Lyme Disease. This disease is the most common vector borne disease today and is often overlooked. The IDC says that their reported cases could possibly be twelve times less than the actual number of cases. All too often Lyme Disease is overlooked and it is time to put it into the spotlight. Please take the time to watch the video and help get a better understanding about what Kristen is going through.  
     </div>
 
     <div class="col-xs-12 col-sm-4">
@@ -145,7 +145,7 @@
     <div class="col-xs-12">
     <a class="anchor" id="about"></a>
     <h1>About Kristen</h1>
-    This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content. This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content. This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content. This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content. This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content. This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content.
+   Kristen has been recommended to seek treatment at an IDC(Infectious Disease Center) in Florida. This center is about 2 hours away from her location. Kristen will need to be monitored 24 hours a day due to the severity of the treatment. She is currently having seizures, so they expect her to get worse before it gets better. Kristen will be residing across the street from the center. Due to the fact that the insurance isn't paying for a majority of the cost, kristen will be responsible for most of it. Kristen will endure not only the treatment, but the financial burden that is associated with it. Kristen will need to cover the $3000-$4000 a week in treatment costs. In addition, she will be responsible for housing, food, and other needs. As a result, this will cost between $4000-$5000 a week to get the treatment she desperately needs. This treatment can last anywhere from four to six months long depending on her adaptation to the treatment. Kristen has already spent almost everything she has so that she can be there for her children. Now it is our job to do the rest. Lets help relieve the financial burden from Kristen's shoulders and all pitch in. Please be generous with your donations because if anyone is deserving, it's kristen. The fact that so much has happened to her and yet she still is pushing through is astonishing. Fundraisers are the catalysts of change... 
     </div>
   </div>
 
@@ -155,13 +155,13 @@
     <div align="center">
       <a class="anchor" id="donate"></a>
       <h2>Ways you can help</h2>
-      <a class="btn btn-lg donate_btn" href="#">
+      <a class="btn btn-lg donate_btn" href="https://www.gofundme.com/8tur3ptw">
         <i class="fa fa-medkit fa-2x pull-left"></i> 
         Donate Now<br>
         Click Here
       </a>
     </div>
-        This is the test content to test that is the test content. If you have the test content for the test then use it if no real content exist. If real content exist use the real content instead of the filler text content. Always update your content. This is the test content to test that is the test content. And of the filler text content. Always update your content. This is the test content to test that is the test content.
+    
   </div>
 
   <hr>
